<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="header_text">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="back">Назад</string>
    <string name="night_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="android_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="user_agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="mail_email_to">hoddlep@yandex.ru</string>
    <string name="mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="reset_search">Сбросить поиск</string>
    <string name="empty_string" />
    <string name="track_image">Обложка трека</string>
    <string name="go_over">Перейти</string>
    <string name="track_author">Очень длинное имя артиста, да такое что вылазит за границы экрана</string>
    <string name="track_timing">2:55</string>
    <string name="track_name">POWERLESS</string>
    <string name="update">Обновить</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="add_to_favorite">Добавить в любимое</string>
    <string name="play">Начать воспроизведение</string>
    <string name="queue_tracks">Список треков</string>
    <string name="duration">Длительность</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="collection">Альбом</string>
    <string name="placeholderCurrentTrack">00:00</string>
    <string name="album_logo">Обложка трека</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlists">Вы не создали ни одного плейлиста</string>
    <string name="no_favorites">Ваша медиатека пуста</string>
    <string name="favorites_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist_header">Новый плейлист</string>
    <string name="create_playlist">Создать</string>
    <string name="playlist_name_edittext_hint">Название*</string>
    <string name="playlist_description_edittext_hint">Описание</string>
    <string name="playlist_cover">Обложка плейлиста</string>
    <string name="add_in_playlist">Добавить в плейлист</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="track_added_in_playlist">Добавлено в плейлист %1$s</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="no_select_image">Не выбрано изображение</string>
    <string name="dialog_finish_creating_playlist_title">Завершить создание плейлиста?</string>
    <string name="dialog_finish_creating_playlist_message">Все несохраненные данные будут потеряны</string>
    <string name="cansel">Отмена</string>
    <string name="yes">Да</string>
    <string name="permission_denied">Вы отклонили доступ к фото. Чтобы продолжить, включите разрешение в настройках приложения.</string>
    <string name="permission_rationale">Для продолжения нужно разрешение на использование фото. Пожалуйста, разрешите доступ в настройках.</string>
    <string name="permission_denied_permanently">Доступ к фото отключён навсегда. Пожалуйста, перейдите в настройки приложения и включите разрешение вручную.</string>
    <string name="permission_cancelled">Запрос разрешения был отменён. Вы можете попробовать снова, чтобы продолжить работу</string>
    <string name="playlist_added">Плейлист %1$s создан</string>
    <string name="image_name_512">512x512bb.jpg</string>
    <string name="binding_is_null">Binding is null</string>
    <string name="playlist_no_tracks">В этом плейлисте нет треков</string>
    <string name="want_delete_track">Хотите удалить трек?</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="want_delete_playlist">Хотите удалить плейлист «%1$s»?</string>
    <string name="edit_playlist_header">Редактировать</string>
    <string name="save_playlist">Сохранить</string>
    <string name="no">Нет</string>
    <string name="menu">Меню</string>
    <string name="choose_cover">Выбор обложки</string>


    <plurals name="tracks">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d элементов</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>