<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:padding="4dp">

        <ImageButton
            android:id="@+id/iBtnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/header_text" />

        <TextView
            style="@style/HeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/settings"
            android:textColor="@color/header_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/scThemeSwitcher"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="@font/ys_display_regular"
            android:paddingHorizontal="16dp"
            android:text="@string/night_theme"
            android:textColor="@color/settings_text_button"
            android:textFontWeight="400"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbShareApp"
            style="@style/SettingsMenuItem"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/share_app"
            app:icon="@drawable/ic_share" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbSendSupport"
            style="@style/SettingsMenuItem"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/write_to_support"
            app:icon="@drawable/ic_support" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbUserAgreement"
            style="@style/SettingsMenuItem"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/agreement"
            app:icon="@drawable/ic_arrow_forward" />

    </LinearLayout>

</LinearLayout>