<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.playlistadd.fragment.AddPlaylistFragment">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/iBtnBack"
            android:layout_width="@dimen/back_button_size"
            android:layout_height="@dimen/back_button_size"
            android:layout_gravity="center_vertical"

            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/header_text" />

        <TextView
            style="@style/HeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/new_playlist_header"
            android:textColor="@color/header_text" />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bPhotoPicker"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/photo_picker"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llHeader" />

    <EditText
        android:id="@+id/etPlaylistName"
        style="@style/EditTextPlaylistBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="playlistName"
        android:hint="@string/playlist_name_edittext_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bPhotoPicker" />

    <EditText
        android:id="@+id/etPlaylistDescription"
        style="@style/EditTextPlaylistBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/playlist_description_edittext_hint"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPlaylistName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bCreate"
        style="@style/CreatePlaylistBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_playlist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>