<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.library.fragment.PlaylistFragment">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbNewPlaylistButton"
        style="@style/NewPlaylistButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/new_playlist" />


    <LinearLayout
        android:id="@+id/llPlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="46dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="24dp">

        <ImageView
            android:id="@+id/ivPlaceholder"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/not_found"
            android:src="@drawable/not_found" />

        <TextView
            android:id="@+id/tvPlaceholder"
            style="@style/PlaceholderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_playlists" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlaylist"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />
</LinearLayout>