<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/svMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/default_playlist_horizontal_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/default_playlist_horizontal_margin" />

        <ImageButton
            android:id="@+id/iBtnBack"
            android:layout_width="@dimen/back_button_size"
            android:layout_height="@dimen/back_button_size"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/header_text" />


        <ImageView
            android:id="@+id/ivCover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/album_logo"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            app:layout_constraintStart_toEndOf="@id/startBorder"
            app:layout_constraintTop_toBottomOf="@id/iBtnBack"
            tools:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/track_content_value"
            android:textFontWeight="400"
            android:textSize="@dimen/large_text_size"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            app:layout_constraintStart_toStartOf="@id/startBorder"
            app:layout_constraintTop_toBottomOf="@id/ivCover"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/artistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/track_content_value"
            android:textFontWeight="400"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            app:layout_constraintStart_toStartOf="@id/startBorder"
            app:layout_constraintTop_toBottomOf="@id/textView"
            tools:text="The Beatles" />

        <ImageButton
            android:id="@+id/iBtnQueue"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/queue_button"
            android:contentDescription="@string/queue_tracks"
            app:layout_constraintBottom_toBottomOf="@id/iBtnPlay"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/startBorder"
            app:layout_constraintTop_toTopOf="@id/iBtnPlay" />

        <ImageButton
            android:id="@+id/iBtnPlay"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/transparent"
            android:enabled="false"
            android:contentDescription="@string/play"
            app:layout_constraintEnd_toStartOf="@id/iBtnFavorite"
            app:layout_constraintStart_toEndOf="@id/iBtnQueue"
            android:src="@drawable/play_button"
            app:layout_constraintTop_toBottomOf="@+id/artistName" />

        <ImageButton
            android:id="@+id/iBtnFavorite"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/favorite_button"
            android:contentDescription="@string/add_to_favorite"
            app:layout_constraintBottom_toBottomOf="@id/iBtnPlay"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toTopOf="@id/iBtnPlay" />

        <TextView
            android:id="@+id/tvCurrentTrackTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_horizontal"
            android:text="@string/placeholderCurrentTrack"
            android:textColor="@color/track_content_value"
            android:textFontWeight="500"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/iBtnPlay"
            app:layout_constraintStart_toStartOf="@id/iBtnPlay"
            app:layout_constraintTop_toBottomOf="@id/iBtnPlay" />

        <TextView
            android:id="@+id/tvDurationTitle"
            style="@style/TrackContentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            app:layout_constraintBaseline_toBaselineOf="@id/tvDurationValue"
            app:layout_constraintStart_toStartOf="@id/startBorder"
            app:layout_constraintTag="trackTimeTitle" />

        <TextView
            android:id="@+id/tvCollectionNameTitle"
            style="@style/TrackContentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collection"
            app:layout_constraintBaseline_toBaselineOf="@id/tvCollectionNameValue"
            app:layout_constraintStart_toStartOf="@id/startBorder"
            app:layout_constraintTag="trackAlbumTitle" />

        <TextView
            android:id="@+id/tvRreleaseDateTitle"
            style="@style/TrackContentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            app:layout_constraintBaseline_toBaselineOf="@id/tvReleaseDateValue"
            app:layout_constraintStart_toStartOf="@id/startBorder"
            app:layout_constraintTag="trackYearTitle" />

        <TextView
            android:id="@+id/tvGenreTitle"
            style="@style/TrackContentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/genre"
            app:layout_constraintBaseline_toBaselineOf="@id/tvGenreValue"
            app:layout_constraintStart_toStartOf="@id/startBorder"
            app:layout_constraintTag="trackGenreTitle" />

        <TextView
            android:id="@+id/tvCountryTitle"
            style="@style/TrackContentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            app:layout_constraintBaseline_toBaselineOf="@id/tvCountryValue"
            app:layout_constraintStart_toStartOf="@id/startBorder"
            app:layout_constraintTag="trackCountryTitle" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/textsBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_tags="trackTimeTitle, trackAlbumTitle, trackYearTitle, trackGenreTitle, trackCountryTitle" />

        <TextView
            android:id="@+id/tvDurationValue"
            style="@style/TrackContentValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            app:layout_constraintStart_toEndOf="@id/textsBarrier"
            app:layout_constraintTop_toBottomOf="@id/tvCurrentTrackTime"
            tools:text="5:32" />

        <TextView
            android:id="@+id/tvCollectionNameValue"
            style="@style/TrackContentValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            app:layout_constraintStart_toEndOf="@id/textsBarrier"
            app:layout_constraintTop_toBottomOf="@id/tvDurationValue"
            tools:text="Yesterday (Remastered 2009) Yesterday (Remastered 2009) Yesterday (Remastered 2009) Yesterday (Remastered 2009) " />

        <TextView
            android:id="@+id/tvReleaseDateValue"
            style="@style/TrackContentValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            app:layout_constraintStart_toEndOf="@id/textsBarrier"
            app:layout_constraintTop_toBottomOf="@id/tvCollectionNameValue"
            tools:text="1965" />

        <TextView
            android:id="@+id/tvGenreValue"
            style="@style/TrackContentValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            app:layout_constraintStart_toEndOf="@id/textsBarrier"
            app:layout_constraintTop_toBottomOf="@id/tvReleaseDateValue"
            tools:text="Рок" />

        <TextView
            android:id="@+id/tvCountryValue"
            style="@style/TrackContentValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            app:layout_constraintStart_toEndOf="@id/textsBarrier"
            app:layout_constraintTop_toBottomOf="@id/tvGenreValue"
            tools:text="Великобритания" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>