<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3772E7"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:paddingHorizontal="16dp"
        android:paddingTop="14dp"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display"
            android:text="@string/header_text"
            android:textColor="@color/white"
            android:textFontWeight="600"
            android:textSize="@dimen/header_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingBottom="28dp">

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/ys_display"
            android:letterSpacing="0"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/main_text_color"
            android:textFontWeight="600"
            android:textSize="@dimen/header_text_size"
            app:cornerRadius="@dimen/main_corner_radius_btn"
            app:icon="@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/main_icon_padding"
            app:iconTint="@color/main_text_color" />

        <Button
            android:id="@+id/library"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/ys_display"
            android:letterSpacing="0"
            android:text="@string/library"
            android:textAllCaps="false"
            android:textColor="@color/main_text_color"
            android:textFontWeight="600"
            android:textSize="@dimen/header_text_size"
            app:cornerRadius="@dimen/main_corner_radius_btn"
            app:icon="@drawable/ic_library"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/main_icon_padding"
            app:iconTint="@color/main_text_color" />

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/ys_display"
            android:letterSpacing="0"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/main_text_color"
            android:textFontWeight="600"
            android:textSize="@dimen/header_text_size"
            app:cornerRadius="@dimen/main_corner_radius_btn"
            app:icon="@drawable/ic_settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/main_icon_padding"
            app:iconTint="@color/main_text_color" />
    </LinearLayout>

</LinearLayout>